perf: reduce rerun output IO #42